# solfps-xyz-contracts

./: .gitignore  Anchor.toml  Cargo.toml  SOLANA_FPS_GAME_DOCUMENTATION.md  package.json  txtx.yml
programs-ecs/components/game/: Cargo.toml
programs-ecs/components/game/src/: lib.rs
programs-ecs/components/health/: Cargo.toml
programs-ecs/components/health/src/: lib.rs
programs-ecs/components/player/: Cargo.toml
programs-ecs/components/player/src/: lib.rs
programs-ecs/components/player_stats/: Cargo.toml
programs-ecs/components/player_stats/src/: lib.rs
programs-ecs/components/position/: Cargo.toml
programs-ecs/components/position/src/: lib.rs
programs-ecs/components/weapon/: Cargo.toml
programs-ecs/components/weapon/src/: lib.rs
programs-ecs/systems/apply_damage/: Cargo.toml
programs-ecs/systems/apply_damage/src/: lib.rs
programs-ecs/systems/end_game/: Cargo.toml
programs-ecs/systems/end_game/src/: lib.rs
programs-ecs/systems/init_game/: Cargo.toml
programs-ecs/systems/init_game/src/: lib.rs
programs-ecs/systems/init_player/: Cargo.toml
programs-ecs/systems/init_player/src/: lib.rs
programs-ecs/systems/join_game/: Cargo.toml
programs-ecs/systems/join_game/src/: lib.rs
programs-ecs/systems/leave_game/: Cargo.toml
programs-ecs/systems/leave_game/src/: lib.rs
programs-ecs/systems/movement/: Cargo.toml
programs-ecs/systems/movement/src/: lib.rs
programs-ecs/systems/reload/: Cargo.toml
programs-ecs/systems/reload/src/: lib.rs
programs-ecs/systems/respawn/: Cargo.toml
programs-ecs/systems/respawn/src/: lib.rs
programs-ecs/systems/set_ready/: Cargo.toml
programs-ecs/systems/set_ready/src/: lib.rs
programs-ecs/systems/shoot/: Cargo.toml
programs-ecs/systems/shoot/src/: lib.rs
programs-ecs/systems/start_game/: Cargo.toml
programs-ecs/systems/start_game/src/: lib.rs
programs-ecs/systems/switch_weapon/: Cargo.toml
programs-ecs/systems/switch_weapon/src/: lib.rs
programs/solfps-xyz-contracts/: Cargo.toml
programs/solfps-xyz-contracts/src/: lib.rs
programs/solfps_xyz_contracts/: Cargo.toml
programs/solfps_xyz_contracts/src/: lib.rs
runbooks/deployment/: main.tx
tests/: solfps-xyz-contracts.ts  solfps_xyz_contracts.ts
