[package]
name = "init_player"
version = "0.2.6"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "init_player"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"
player = { path = "../../components/player" }
health = { path = "../../components/health" }
weapon = { path = "../../components/weapon" }
player_stats = { path = "../../components/player_stats" }
