[package]
name = "init_player"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "init_player"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
player = { version = "0.1.10", path = "../../components/player", features = ["no-entrypoint"] }
health = { version = "0.1.10", path = "../../components/health", features = ["no-entrypoint"] }
weapon = { version = "0.1.10", path = "../../components/weapon", features = ["no-entrypoint"] }
player_stats = { version = "0.1.10", path = "../../components/player_stats", features = ["no-entrypoint"] }
