[package]
name = "shoot"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shoot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
player = { version = "0.1.10", path = "../../components/player", features = ["cpi"] }
weapon = { version = "0.1.10", path = "../../components/weapon", features = ["cpi"] }
position = { version = "0.1.10", path = "../../components/position", features = ["cpi"] }